--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <a href="https://giovanaliveira.github.io/IntroducaoAoHtml/">Introdução ao Html</a>
   <a href="https://giovanaliveira.github.io/Tabela/">Tabela</a>
   <a href="https://giovanaliveira.github.io/listadetarefas/">Lista de Tarefas</a>
+  <a href="https://giovanaliveira.github.io/Formulario/">Formulario</a>
 </nav>
 
 <div class="button-container">
